syntax = "proto3";

package heimonsy.fxxk;

option go_package = "github.com/heimonsy/fxxk";
option java_multiple_files = true;
option objc_class_prefix = "RPC";

message Command {
	enum Type {
		PING = 0;
		NEW_TUNEL = 1;
		CLOSE = 99;
	}

	Type type = 1;
}

message ConnectRequest {
	string client_id = 1;
}

message TunnelPackage {
	string conn_id = 1;
	bytes data = 2;
}

message TunnelRequest {
	oneof req {
		TunnelPackage data = 1;
		string client_id = 2;
	}
}

service Fxxk {
	rpc Connect(ConnectRequest) returns (stream Command);

	rpc ProxyTunel(stream TunnelRequest) returns (stream TunnelPackage);
}
